[project]
name = "keepass_conflict_fixer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "R1D3R175", email = "r1.d3.r175@gmail.com"},
]
dependencies = [
    "pykeepass>=4.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
logging = [
    "loguru>=0.7.2",
]
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
lint = [
    "pylint>=3.2.6",
]
doc = [
    "sphinx>=8.0.0",
]
