[project]
name = "keepass_conflict_fixer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "R1D3R175", email = "r1.d3.r175@gmail.com"},
]
dependencies = [
    "pykeepass>=4.1.0",
    "loguru>=0.7.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
lint = [
    "pylint>=3.2.6",
]
doc = [
    "sphinx>=8.0.0",
]
automation = [
    "tox>=4.16.0",
    "tox-pdm>=0.7.2",
]
